chamber/styles/base.css
/* ... */
.event-card.show span.right {
    left: 10px;
}

.event-card.show span.left {
    right: 10px;
}

.event-card.show .card-flap {
    background: var(--grey);
    transform: rotateX(0deg);
}

.event-card.show .flap1 {
    transition: all 0.3s 0s ease-out;
}

.event-card.show .flap2 {
    transition: all 0.3s 0.2s ease-out;
}

.fa-2x {
    font-size: 2em;
}

.fa {
    position: relative;
    display: table-cell;
    width: 60px;
    height: 36px;
    text-align: center;
    vertical-align: middle;
    font-size: 20px;
}


.side-bar:hover {
    width: 250px;
    overflow: visible;
}

.side-bar:hover+.gallery {
    filter: blur(2px);
}

.side-bar {
    background: var(--primary);
    position: absolute;
    top: -22px;
    bottom: 0;
    height: 100%;
    left: 0;
    width: 60px;
    padding-bottom: 107px;
    overflow: hidden;
    -webkit-transition: width .05s linear;
    transition: width .05s linear;
    -webkit-transform: translateZ(0) scale(1, 1);
    z-index: 1000;
}

.side-bar>ul {
    margin: 7px 0;
}

.side-bar li {
    position: relative;
    display: block;
    width: 250px;
}

.side-bar li>a {
    position: relative;
    display: table;
    border-collapse: collapse;
    border-spacing: 0;
    color: var(--white);
    font-family: arial;
    font-size: 14px;
    text-decoration: none;
    -webkit-transform: translateZ(0) scale(1, 1);
    -webkit-transition: all .1s linear;
    transition: all .1s linear;

}

.side-bar .nav-icon {
    position: relative;
    display: table-cell;
    width: 60px;
    height: 36px;
    text-align: center;
    vertical-align: middle;
    font-size: 18px;
}

.side-bar .nav-text {
    position: relative;
    display: table-cell;
    vertical-align: middle;
    width: 190px;
    font-family: 'Titillium Web', sans-serif;
}

.side-bar>ul.logout {
    position: absolute;
    display: none;
    left: 0;
    bottom: 0;
}

.no-touch .scrollable.hover {
    overflow-y: hidden;
}

.no-touch .scrollable.hover:hover {
    overflow-y: auto;
    overflow: visible;
}

a:hover,
a:focus {
    text-decoration: none;
}

nav.side-bar {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
}

nav.side-bar ul,
nav.side-bar li {
    outline: 0;
    margin: 0;
    padding: 0;
}

.side-bar li:hover>a,
nav.side-bar li.active>a,
.dropdown-menu>li>a:hover,
.dropdown-menu>li>a:focus,
.dropdown-menu>.active>a,
.dropdown-menu>.active>a:hover,
.dropdown-menu>.active>a:focus,
.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,
.dashboard-page nav.dashboard-menu ul li.active a {
    color: #fff;
    background-color: #000000;
}

.area {
    float: left;
    background: #e2e2e2;
    width: 100%;
    height: 100%;
}

footer {
    background-color: var(--grey);
    height: auto;
}

.footer-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 16%;
}

.footer-logo-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 20px;
}

.footer-logo-name {
    display: none;
}

.footer-logo {
    height: 100px;
    width: 100px;
    margin-left: 20px;
}

.footer-info {
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
    gap: 8px;
    font-size: 0.75em;
}

.footer-data {
    padding: 20px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 5px;
}

/*************************** CCONTACT US PAGE *****************************************/
#contactUS {
    background-image: url('../images/meeting-room.jpg');
    background-size: cover;
    position: relative;
    height: 90vh;
}

#contactUS h1 {
    margin: 0;
    text-align: center;
    color: var(--black);
}

#feedback {
    display: grid;
    grid-template-columns: 1fr;
    gap: 20px;
    max-width: 850px;
    margin: auto;
}

.form-container {
    background-color: var(--white);
    height: auto;
    padding: 20px 40px;
    border-top: 8px solid var(--primary);
    margin-top: 4%;
}


.form-title {
    margin: 0;
    text-align: start;
}

.form-fields {
    list-style-type: none;
    padding: 0;
    text-align: start;
}

.field {
    width: 100%;
    margin-top: 10px;
}

.field-label {
    color: #4d4d4d;
    font-size: 17px;
    text-transform: uppercase;
    line-height: 20px;
}

.form-fields input {
    border: 1px solid #bfbaba;
    padding: 10px;
    width: 100%;
    box-sizing: border-box;
    line-height: 20px;
}

.membership {
    display: none;
}

.form-card {
    background-color: var(--tertiary);
    border: 2px solid var(--black);
    text-align: center;
    padding: 10px;
}

.form-button {
    margin: 10px auto;
    display: flex;
    background-color: var(--primary);
    color: var(--white);
    border: none;
    padding: 10px;
    text-align: center;
}

/********************************* DIRECTORY PAGE **********************************/
.members-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 20px;
    background-color: var(--tertiary);
    place-items: center;
    padding: 30px 0;
}

.members-container .card {
    width: 190px;
    height: 300px;
    background: white;
    padding: .4em;
    border-radius: 6px;
    box-shadow: none;
}

.members-container .card-image {
    background-color: var(--tertiary);
    width: 100%;
    height: 60%;
    border-radius: 6px 6px 0 0;
    padding-bottom: 0;
}

.members-container .card-image:hover {
    transform: scale(0.98);
}

.members-container .category {
    text-transform: uppercase;
    font-size: 0.7em;
    font-weight: 600;
    color: rgb(63, 121, 230);
    padding: 10px 7px 0;
}

.members-container .category:hover {
    cursor: pointer;
}

.members-container .heading {
    font-weight: 600;
    color: var(--black);
    padding: 7px;
}

.members-container .heading:hover {
    cursor: pointer;
}
/* ... */

